syntax = "proto3";

package blog;

option go_package = "blogpb";

message Blog {
    int64 id = 1;
    int64 author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1; //will have a blog id
}

message ReadBlogRequest {
    int64 blog_id = 1;
}

message ReadBlogResponse {
    Blog blog = 1;
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1;
}

message DeleteBlogRequest {
    int64 blog_id = 1;
}

message DeleteBlogResponse {
    int64 blog_id = 1;
}

message ListBlogRequest {

}

message ListBlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog (CreateBlogRequest) returns (CreateBlogResponse);
    rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse);
    rpc UpdateBlog (UpdateBlogRequest) returns (UpdateBlogResponse);
    rpc DeleteBlog (DeleteBlogRequest) returns (DeleteBlogResponse);
    rpc ListBlog (ListBlogRequest) returns (stream ListBlogResponse);
}